syntax = "proto3";

package rdfc;

message Error { string cause = 1; }

message Close { string channel = 1; }

message Message {
  string channel = 1;
  bytes data = 2;
  uint32 tick = 3;
}

message StreamIdentify {
  string channel = 1;
  uint32 tick = 2;
  string runner = 3;
}

message StreamChunk {
  oneof inner {
    StreamIdentify id = 1;
    DataChunk data = 2;
  }
}

message MessageProcessed {
  string channel = 1;
  // identifying the message that is fully processed
  uint32 tick = 2;
}

message DataChunk { bytes data = 1; }

message StreamMessage {
  // globally identifying this stream message, used with receiveStreamMessage
  uint32 id = 1;
  string channel = 2;
  // identifying this message
  uint32 tick = 3;
}
